--- a/index.stable.html
+++ b/index.stable.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-	<title>Specs v.0.6</title>
+	<title>Specs v.0.7</title>
 	
 	<!-- Le styles -->
     <link href="assets/bootstrap.specs-engine.css" rel="stylesheet">
@@ -57,11 +57,11 @@
 	<!-- Overview -->
     <script type="text/template" id="template-overview-category"> 
     	<div class="overview-category clearfix" data-content="<%= hash %>">
-    		<div class="header">
-	    		<strong><%= title %></strong>
+    		<div class="header clearfix">
+	    		<h3 class="pull-left"><%= title %></h3>
 	    		<div class="pull-right">
-		    		<span>Mockups: <%= mockups %></span>
-		    		<span>Notes: <%= notes %></span>
+		    		<span class="mockup-info"><%= mockups %></span>
+		    		<span class="note-info"><%= notes %></span>
 		    	</div>
     		</div>
     	</div>
@@ -85,12 +85,12 @@
     
 	<!-- Dot -->
     <script type="text/template" id="template-dot"> 
-    	<span class="dot mockup mock-<%= index %>" data-id="<%= index %>" style="left: <%= left - 12 %>px; top: <%= top - 12 %>px;"><%= index %></span>
+    	<span class="dot square red mockup mock-<%= index %>" data-id="<%= index %>" style="left: <%= left - 12 %>px; top: <%= top - 12 %>px;"><%= index %></span>
     </script>
     
     <script type="text/template" id="template-dot-sidebar"> 
     	<div class="notation">
-	    	<span class="dot side-<%= index %>" data-id="<%= index %>"><%= index %></span>
+	    	<span class="dot square red side-<%= index %>" data-id="<%= index %>"><%= index %></span>
 	    	<p><%= content %></p>
 	    </div>
     </script>
