--- a/index-dev.html
+++ b/index-dev.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-	<title>Specs v.0.8.1</title>
+	<title>Specs v.0.8.2</title>
 	
 	<!-- Le styles -->
     <link href="assets/bootstrap.specs-engine.less" rel="stylesheet/less">
@@ -80,8 +80,8 @@
     <script type="text/template" id="template-dropdown-item"> 
 	    <li><a href="#<%= hash %>" class="clearfix">
 			<span class="pull-right">
-	    		<span class="mockup-info"><i class="icon-picture icon-white"></i><i class="icon-picture icon-black"></i> <%= mockups %></span>
-	    		<span class="note-info"><i class="icon-comment icon-white"></i><i class="icon-comment icon-black"></i> <%= notes %></span>
+	    		<span class="mockup-info"><i class="icon-picture"></i> <%= mockups %></span>
+	    		<span class="note-info"><i class="icon-comment"></i> <%= notes %></span>
 	    	</span>
 		    <span class="title"><%= title %></span>
     	</a></li>
@@ -99,13 +99,13 @@
     <script type="text/template" id="template-mockup"> 
     	<div class="mockupinfo">
 	    	<h3><%= title %></h3>
-	    	<p><%= desc %></p>
+	    	<%= desc %>
 	    </div>
     </script>
     
 	<!-- Dot -->
     <script type="text/template" id="template-dot"> 
-    	<span class="dot square red mockup mock-<%= index %>" data-id="<%= index %>" style="left: <%= left - 12 %>px; top: <%= top - 12 %>px;"><%= index %></span>
+    	<span class="dot square red mockup mock-<%= index %>" data-id="<%= index %>" style="left: <%= left - 12 %>px; top: <%= top - 36 %>px;"><%= index %></span>
     </script>
     
     <script type="text/template" id="template-dot-sidebar"> 
