--- a/index-dev.html
+++ b/index-dev.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-	<title>Specs v.0.9.1</title>
+	<title>Specs v.1.0</title>
 	
 	<!-- Le styles -->
     <link href="assets/bootstrap.specs-engine.less" rel="stylesheet/less">
@@ -19,7 +19,7 @@
 				<span id="version" class="pull-left"></span>
 				
 				<ul class="nav nav-pills pull-right">
-					<li><a id="hidenotes" href="#">Hide Spec Notes</a></li>
+					<li><a id="hidenotes" href="#">Hide Annotations</a></li>
 				    <li id="cat-dropdown" class="dropdown">
 				    	<a class="dropdown-toggle" data-toggle="dropdown" href="#">
 					    	<span id="cat-name">Dropdown</span> <b class="caret"></b>
